# NotWordleAndroid

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/app/notwordle/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jni/: dictionary-jni.cpp  game-jni.cpp  grid-jni.cpp  native-lib.cpp  space-jni.cpp
app/src/main/cpp/model/: CMakeLists.txt
app/src/main/cpp/model/cmake/: CodeCoverage.cmake  Doxygen.cmake
app/src/main/cpp/model/doc/doxygen/: Doxyfile.in
app/src/main/cpp/model/inc/game/: Color.h  Dictionary.h  Game.h  Validity.h
app/src/main/cpp/model/inc/game/objects/: GameObject.h  Grid.h  Space.h
app/src/main/cpp/model/src/: Version.h.in  main.cpp
app/src/main/cpp/model/src/game/: Dictionary.cpp  Game.cpp
app/src/main/cpp/model/src/game/objects/: Grid.cpp  Space.cpp
app/src/main/cpp/model/test/: CMakeLists.txt
app/src/main/cpp/model/test/expected/GameTest/: TestRunEasyExpected.txt  TestRunLoserExpected.txt  TestRunSingleWrongGuessExpected.txt
app/src/main/cpp/model/test/game/: ColorTest.cpp  DictionaryTest.cpp  GameTest.cpp  ValidityTest.cpp
app/src/main/cpp/model/test/game/objects/: GridTest.cpp  SpaceTest.cpp
app/src/main/java/app/notwordle/: GameActivity.kt  GameKeyboard.kt  MainActivity.kt  OptionsActivity.kt  StartGameActivity.kt
app/src/main/java/app/notwordle/objects/: Dictionary.kt  Game.kt  Grid.kt  Space.kt
app/src/main/res/drawable/: space_shape.xml
app/src/main/res/layout/: activity_game.xml  activity_main.xml  activity_start_game.xml  keyboard.xml  options_activity.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/app/notwordle/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
